--- a/src/app/products/products-list/products-list.component.html
+++ b/src/app/products/products-list/products-list.component.html
@@ -1,6 +1,6 @@
 <h2>Product List</h2>
 <ul>
-  <li *ngFor="let product of products ; let i=index" (click)="selectedProduct = product">
+  <li *ngFor="let product of products | sortProducts; let i=index" (click)="selectedProduct = product">
     {{i+1}}. {{product}}
   </li>
 </ul>
