--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,9 @@
 
-<app-products-list></app-products-list>
+<!--<app-products-list></app-products-list>-->
+<app-product-list-v2></app-product-list-v2>
+<!--
 <div>
     <app-key-logger></app-key-logger>
 </div>
+-->
 <router-outlet><router-outlet/>
