--- a/src/app/products-v2/product-list-v2/product-list-v2.component.html
+++ b/src/app/products-v2/product-list-v2/product-list-v2.component.html
@@ -1,7 +1,10 @@
 <h2>Product List</h2>
 <ul>
-    <li *ngFor="let product of (productsByService$ | async)!" (click)="selectedProduct = product">
-        {{product.name}}
+    <li *ngFor="let product of products!" (click)="selectedProduct = product">
+    <!-- use async for subscribe and unsubscribe automatically -->
+    <!--<li *ngFor="let product of (productsByService$ | async)!" (click)="selectedProduct = product">-->
+
+      {{product.id}} - {{product.name}} - {{product.price}}
       </li>
   </ul>
 <ul>
@@ -9,9 +12,14 @@
 </ul>
 <app-product-detail-v2
   *ngIf="selectedProduct; else noProduct"
-  [name]="selectedProduct.name"
-  (bought)="onBuy()">
+  [id]="selectedProduct.id"
+  (bought)="onBuy()"
+  (deleted)="onDelete()"
+>
 </app-product-detail-v2>
+
 <ng-template #noProduct>
   <p>No product selected!</p>
 </ng-template>
+
+<app-product-create-v2 (added)="onAdd($event)"></app-product-create-v2>
