authentication and interceptors

--- a/src/app/products-v2/product-detail-v2/product-detail-v2.component.html
+++ b/src/app/products-v2/product-detail-v2/product-detail-v2.component.html
@@ -4,6 +4,6 @@
   <span>{{product.price | currency:'EUR'}}</span>
   <input placeholder="New price" #price/>
   <button (click)="changePrice(product, price.valueAsNumber)">Update price</button>
-  <button (click)="buy()">Buy Now</button>
+  <button *ngIf="authService.isLoggedIn"  (click)="buy()">Buy Now</button>
   <button class="delete" (click)="remove(product)">Delete</button>
 </div>
