--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,12 @@
 <app-auth></app-auth>
 <!--<app-products-list></app-products-list>-->
-<app-product-list-v2></app-product-list-v2>
+<!--<app-product-list-v2></app-product-list-v2>-->
 <!--
 <div>
     <app-key-logger></app-key-logger>
 </div>
 -->
+<a routerLink="/products">Products</a>
+<a routerLink="/cart">Cart</a>
+<router-outlet></router-outlet>
 <router-outlet><router-outlet/>
