--- a/src/app/products-v2/product-list-v2/product-list-v2.component.html
+++ b/src/app/products-v2/product-list-v2/product-list-v2.component.html
@@ -1,15 +1,13 @@
 <h2>Product List</h2>
 <ul>
-    <li *ngFor="let product of products!" (click)="selectedProduct = product">
+    <li *ngFor="let product of products" (click)="selectedProduct = product">
     <!-- use async for subscribe and unsubscribe automatically -->
     <!--<li *ngFor="let product of (productsByService$ | async)!" (click)="selectedProduct = product">-->
 
       {{product.id}} - {{product.name}} - {{product.price}}
-      </li>
-  </ul>
-<ul>
-
+    </li>
 </ul>
+
 <app-product-detail-v2
   *ngIf="selectedProduct; else noProduct"
   [id]="selectedProduct.id"
