--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
     <app-key-logger></app-key-logger>
 </div>
 -->
-<a routerLink="/products">Products</a>
-<a routerLink="/cart">Cart</a>
+<a routerLink="/products" routerLinkActive="active">Products</a>
+<a routerLink="/cart"  routerLinkActive="active">Cart</a>
 <router-outlet></router-outlet>
 <router-outlet><router-outlet/>
