--- a/src/app/products-v3/products-list-v3/products-list-v3.component.html
+++ b/src/app/products-v3/products-list-v3/products-list-v3.component.html
@@ -1,6 +1,6 @@
 <h2>Product List</h2>
 <ul>
     <li *ngFor="let product of products" (click)="selectedProduct = product">
-      {{product.id}} - {{product.name}} - {{product.price}}
+      <a [routerLink]="['/products', product.id]">{{product.id}} - {{product.name}} - {{product.price}}</a>
     </li>
 </ul>
