--- a/src/app/products-v3/products-list-v3/products-list-v3.component.html
+++ b/src/app/products-v3/products-list-v3/products-list-v3.component.html
@@ -1,6 +1,8 @@
 <h2>Product List</h2>
 <ul>
     <li *ngFor="let product of products" (click)="selectedProduct = product">
-      <a [routerLink]="['/products', product.id]">{{product.id}} - {{product.name}} - {{product.price}}</a>
+      <a [routerLink]="['./', product.id]">{{product.id}} - {{product.name}} - {{product.price}}</a>
+      <!-- another option: this.router.navigate(['./', product.id], { relativeTo: this.route }); -->
     </li>
 </ul>
+<router-outlet></router-outlet> <!-- necessary to diplay children components -->
