--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,5 +8,6 @@
 -->
 <a routerLink="/products" routerLinkActive="active">Products</a>
 <a routerLink="/cart"  routerLinkActive="active">Cart</a>
+<a routerLink="/about" routerLinkActive="active">About Us</a>
 <router-outlet></router-outlet>
 <router-outlet><router-outlet/>
