--- a/src/app/products-v3/product-detail-v3/product-detail-v3.component.html
+++ b/src/app/products-v3/product-detail-v3/product-detail-v3.component.html
@@ -2,5 +2,13 @@
     <h2>Product Details</h2>
     <h3>{{product.name}}</h3>
     <span>{{product.price | currency:'EUR'}}</span>
-  </div>
+
+    <!-- Template-driven form -->
+    <form (ngSubmit)="changePrice(product, price!)">
+      <input placeholder="New price" name="price" [(ngModel)]="price" />
+      <button type="submit">Change</button>
+    </form>
+</div>
+
+
   
