--- a/src/app/products-v3/product-detail-v3/product-detail-v3.component.html
+++ b/src/app/products-v3/product-detail-v3/product-detail-v3.component.html
@@ -8,6 +8,9 @@
       <input placeholder="New price" name="price" [(ngModel)]="price" />
       <button type="submit">Change</button>
     </form>
+
+    <!-- React-driven form-->
+    <app-product-create-v3 (added)="onAdd($event)"></app-product-create-v3>
 </div>
 
 
