--- a/src/app/products-v3/product-detail-v3/product-detail-v3.component.html
+++ b/src/app/products-v3/product-detail-v3/product-detail-v3.component.html
@@ -11,6 +11,8 @@
 
     <!-- React-driven form-->
     <app-product-create-v3 (added)="onAdd($event)"></app-product-create-v3>
+
+    <button *ngIf="authService.isLoggedIn" (click)="buy(product)">Buy Now</button>
 </div>
 
 
