add angular material

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,8 +6,18 @@
     <app-key-logger></app-key-logger>
 </div>
 -->
+<!-- without material-->
+<!--
 <a routerLink="/products" routerLinkActive="active">Products</a>
 <a routerLink="/cart"  routerLinkActive="active">Cart</a>
 <a routerLink="/about" routerLinkActive="active">About Us</a>
-<router-outlet></router-outlet>
+-->
+<mat-toolbar color="primary">
+    <span>E-shop</span>
+    <span class="spacer"></span>
+    <a mat-flat-button color="primary" routerLink="/products">Products</a>
+    <a mat-flat-button color="primary" routerLink="/cart">Cart</a>
+    <a mat-flat-button color="primary" routerLink="/about">About Us</a>
+    <app-auth></app-auth>
+</mat-toolbar>
 <router-outlet><router-outlet/>
