--- a/src/app/products-v3/product-detail-v3/product-detail-v3.component.html
+++ b/src/app/products-v3/product-detail-v3/product-detail-v3.component.html
@@ -3,17 +3,44 @@
     <h3>{{product.name}}</h3>
     <span>{{product.price | currency:'EUR'}}</span>
 
+    <button mat-raised-button color="primary" (click)="changePrice(product)">Change</button>
     <!-- Template-driven form -->
+    <!--
     <form (ngSubmit)="changePrice(product, price!)">
       <input placeholder="New price" name="price" [(ngModel)]="price" />
       <button type="submit">Change</button>
     </form>
+    -->
 
     <!-- React-driven form-->
     <app-product-create-v3 (added)="onAdd($event)"></app-product-create-v3>
 
     <button *ngIf="authService.isLoggedIn" (click)="buy(product)">Buy Now</button>
-</div>
 
+    <!-- Angular Material -->
+    <div>
+      <button mat-button color="primary">I am an Angular Material button</button>
+      <button mat-raised-button>Raised button</button>
+      <button mat-flat-button>Flat button</button>
+      <button mat-stroked-button>Stroked button</button>
+      <button mat-icon-button>
+        <mat-icon>favorite</mat-icon>
+      </button>
+      <button mat-fab>
+        <mat-icon>delete</mat-icon>
+      </button>
+      <mat-button-toggle-group>
+        <mat-button-toggle value="left">
+          <mat-icon>format_align_left</mat-icon>
+        </mat-button-toggle>
+        <mat-button-toggle value="center">
+          <mat-icon>format_align_center</mat-icon>
+        </mat-button-toggle>
+        <mat-button-toggle value="right">
+          <mat-icon>format_align_right</mat-icon>
+        </mat-button-toggle>
+      </mat-button-toggle-group>
+    </div>
+</div>
 
   
