--- a/src/app/products-v3/products-list-v3/products-list-v3.component.html
+++ b/src/app/products-v3/products-list-v3/products-list-v3.component.html
@@ -43,4 +43,30 @@
   </mat-selection-list>
 </div>
 
+<!-- a mat-list list with drag and drop -->
+<mat-list cdkDropList (cdkDropListDropped)="reorder($event)">
+  <mat-list-item cdkDrag *ngFor="let product of products">
+    {{product.name}}
+  </mat-list-item>
+</mat-list>
+
+
+<!-- a sortable mat-table -->
+<table mat-table [dataSource]="datasource" matSort matSortDisableClear>
+  <!--<ng-container> element is a unique-purpose element used to group elements with similar functionality.  -->
+  <ng-container matColumnDef="name">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
+    <td mat-cell *matCellDef="let product">
+      <a [routerLink]="['/products', product.id]">{{product.name}}</a>
+    </td>
+  </ng-container>
+  <ng-container matColumnDef="price">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>Price</th>
+    <td mat-cell *matCellDef="let product">{{product.price | currency}}</td>
+  </ng-container>
+  <tr mat-header-row *matHeaderRowDef="columnNames"></tr>
+  <tr mat-row *matRowDef="let row; columns: columnNames;"></tr>
+</table>
+<mat-paginator [pageSize]="5" [pageSizeOptions]="[5,10,15]"></mat-paginator>
+
 <router-outlet></router-outlet> <!-- necessary to diplay children components -->
